Adding JavaDoc to: entities, services, controller etc.