@@ -1,13 +1,10 @@
 package it.unicam.cs.idsflsm.municipalplatform.application.services.attachment;
+import it.unicam.cs.idsflsm.municipalplatform.application.abstractions.handlers.attachment.IAttachmentHandler;
 import it.unicam.cs.idsflsm.municipalplatform.application.abstractions.services.attachment.IAttachmentService;
-import it.unicam.cs.idsflsm.municipalplatform.application.abstractions.services.report.IReportService;
 import it.unicam.cs.idsflsm.municipalplatform.application.criterias.attachment.AttachmentCriteria;
-import it.unicam.cs.idsflsm.municipalplatform.application.factories.attachment.AttachmentBuilderFactory;
 import it.unicam.cs.idsflsm.municipalplatform.application.mappers.attachment.AuthorizedAttachmentMapper;
 import it.unicam.cs.idsflsm.municipalplatform.application.mappers.attachment.GenericAttachmentMapper;
 import it.unicam.cs.idsflsm.municipalplatform.application.mappers.attachment.PendingAttachmentMapper;
-import it.unicam.cs.idsflsm.municipalplatform.application.mappers.content.itinerary.GenericItineraryMapper;
-import it.unicam.cs.idsflsm.municipalplatform.application.mappers.content.poi.GenericPOIMapper;
 import it.unicam.cs.idsflsm.municipalplatform.application.mappers.report.ReportMapper;
 import it.unicam.cs.idsflsm.municipalplatform.application.models.dtos.attachment.AttachmentDto;
 import it.unicam.cs.idsflsm.municipalplatform.application.models.dtos.attachment.AuthorizedAttachmentDto;
@@ -25,18 +22,29 @@ import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+/**
+ * Service class for the AttachmentRepository. It provides methods to manipulate persistent
+ * attachments in the database
+ */
 @Service
 @Transactional
 @AllArgsConstructor(onConstructor_ = @Autowired)
 public class AttachmentService implements IAttachmentService {
+    /**
+     * The repository for Attachment entity
+     */
     private final IAttachmentRepository _attachmentRepository;
-    private final AttachmentBuilderFactory _attachmentBuilderFactory;
+//    private final AttachmentBuilderFactory _attachmentBuilderFactory;
+    /**
+     * The handler for Attachment entity
+     */
+    private final IAttachmentHandler _attachmentHandler;
 //    private final IReportService _reportService;
     @Override
     public void saveInRepository(Attachment attachment) {
@@ -68,14 +76,31 @@ public class AttachmentService implements IAttachmentService {
             return null;
         }
     }
+
+
+//    TODO : MERGING OF PENDING AND AUTHORIZED
+    @Override
+    public List<AttachmentDto> getAttachments(Optional<Predicate<Attachment>> predicate) {
+        Stream<Attachment> attachmentStream = _attachmentRepository.findAll().stream();
+        List<Attachment> attachments = predicate.map(attachmentPredicate -> attachmentStream
+            .filter(attachmentPredicate)
+            .toList())
+            .orElseGet(attachmentStream::toList);
+        if (!attachments.isEmpty()) {
+            return GenericAttachmentMapper.toDto(attachments, true);
+        }
+        return new ArrayList<>();
+    }
+
+
     private List<Attachment> getAttachments(Optional<Predicate<Attachment>> predicate, Class<?> type) {
         Stream<Attachment> attachments = _attachmentRepository.findAll().stream();
         return predicate.map(attachmentPredicate -> attachments
                         .filter(attachmentPredicate.and((type::isInstance)))
-                        .collect(Collectors.toList()))
+                        .toList())
                 .orElseGet(() -> attachments
                         .filter(type::isInstance)
-                        .collect(Collectors.toList()));
+                        .toList());
     }
     @Override
     public PendingAttachmentDto getPendingAttachmentById(UUID id) {
@@ -85,6 +110,19 @@ public class AttachmentService implements IAttachmentService {
     public AuthorizedAttachmentDto getAuthorizedAttachmentById(UUID id) {
         return AuthorizedAttachmentMapper.toDto(getAttachmentById(id, AuthorizedAttachment.class), true);
     }
+
+
+//    TODO : MERGING OF PENDING AND AUTHORIZED
+    @Override
+    public AttachmentDto getAttachmentById(UUID id) {
+        Attachment attachment = _attachmentRepository.findById(id).orElse(null);
+        if (attachment != null) {
+            return GenericAttachmentMapper.toDto(attachment, true);
+        }
+        return null;
+    }
+
+
     private <T extends Attachment> T getAttachmentById(UUID id, Class<T> type) {
         Attachment attachment = _attachmentRepository.findById(id).orElse(null);
         if (attachment != null) {
@@ -129,23 +167,39 @@ public class AttachmentService implements IAttachmentService {
 //            return false;
 //        }
 //    }
+//    @Override
+//    public boolean deleteAuthorizedAttachmentById(UUID id) {
+//        AuthorizedAttachment attachment = getAttachmentById(id, AuthorizedAttachment.class);
+//        if (attachment != null) {
+////            attachment.setState(ContentState.REMOVABLE);
+////            // _attachmentRepository.deleteById(id);
+////            _attachmentRepository.save(attachment);
+////            attachment.getPoi().getAttachments().remove(attachment);
+////            attachment.setPoi(null);
+//            attachment.detachFromEntities();
+//            _attachmentRepository.delete(attachment);
+//            return true;
+//        } else {
+//            return false;
+//        }
+//    }
+
+
+//    TODO : MERGING OF PENDING AND AUTHORIZED
+//    TODO : FOR TESTING PURPOSES ONLY
     @Override
-    public boolean deleteAuthorizedAttachmentById(UUID id) {
-        AuthorizedAttachment attachment = getAttachmentById(id, AuthorizedAttachment.class);
+    public AttachmentDto deleteAttachmentById(UUID id) {
+        Attachment attachment = _attachmentRepository.findById(id).orElse(null);
         if (attachment != null) {
-//            attachment.setState(ContentState.REMOVABLE);
-//            // _attachmentRepository.deleteById(id);
-//            _attachmentRepository.save(attachment);
-//            attachment.getPoi().getAttachments().remove(attachment);
-//            attachment.setPoi(null);
             attachment.detachFromEntities();
             _attachmentRepository.delete(attachment);
-            return true;
-        } else {
-            return false;
+            return GenericAttachmentMapper.toDto(attachment, true);
         }
+        return null;
     }
-//    // TODO : PROBABLY USELESS
+
+
+    //    // TODO : PROBABLY USELESS
 //    @Override
 //    public boolean deletePendingAttachment(PendingAttachmentDto attachmentDto, Optional<Predicate<Attachment>> predicate) {
 //        if (getAttachments(predicate, PendingAttachment.class).get(0) != null) {
@@ -175,16 +229,29 @@ public class AttachmentService implements IAttachmentService {
 //    }
     @Override
     public PendingAttachmentDto updatePendingAttachment(PendingAttachmentDto attachmentDto, Optional<Predicate<Attachment>> predicate) {
-        var attachment = updateAttachment(attachmentDto, UserPermission.AUTHTOURIST_ATTACHMENT_CREATE);
-        _attachmentRepository.save(attachment);
+        var attachment = _attachmentHandler.modifyAttachment(attachmentDto, UserPermission.CURATOR_ATTACHMENT_UPDATE);
+//      TODO : THIS WAS CORRECT
+//        _attachmentRepository.save(attachment);
         return attachmentDto;
     }
     @Override
     public AuthorizedAttachmentDto updateAuthorizedAttachment(AuthorizedAttachmentDto attachmentDto, Optional<Predicate<Attachment>> predicate) {
-        var attachment = updateAttachment(attachmentDto, UserPermission.AUTHCONTRIBUTOR_ATTACHMENT_CREATE_AUTHORIZED);
-        _attachmentRepository.save(attachment);
+        var attachment = _attachmentHandler.modifyAttachment(attachmentDto, UserPermission.CURATOR_ATTACHMENT_UPDATE);
+//      TODO : THIS WAS CORRECT
+//        _attachmentRepository.save(attachment);
         return attachmentDto;
     }
+
+
+//    TODO : MERGING OF PENDING AND AUTHORIZED
+    @Override
+    public AttachmentDto updateAttachment(AttachmentDto attachmentDto) {
+        Attachment attachment = _attachmentHandler.modifyAttachment(attachmentDto, UserPermission.CURATOR_ATTACHMENT_UPDATE);
+        _attachmentRepository.save(attachment);
+        return GenericAttachmentMapper.toDto(attachment, true);
+    }
+
+
     @Override
     public PendingAttachmentDto validatePendingAttachment(Optional<Predicate<Attachment>> predicate, boolean validate) {
         PendingAttachment attachment = (PendingAttachment) getAttachments(predicate, PendingAttachment.class).get(0);
@@ -197,6 +264,23 @@ public class AttachmentService implements IAttachmentService {
             return null;
         }
     }
+
+
+//    TODO : MERGING OF PENDING AND AUTHORIZED
+    @Override
+    public AttachmentDto validateAttachment(Predicate<Attachment> predicate, boolean validate) {
+        List<Attachment> attachments = _attachmentRepository.findAll().stream().filter(predicate).toList();
+        if (!attachments.isEmpty()) {
+            Attachment attachment = attachments.get(0);
+            ContentState newState = (validate) ? ContentState.UPLOADABLE : ContentState.REMOVABLE;
+            attachment.setState(newState);
+            _attachmentRepository.save(attachment);
+            return GenericAttachmentMapper.toDto(attachment, true);
+        }
+        return null;
+    }
+
+
     @Override
     public List<PendingAttachmentDto> uploadAllPendingAttachments() {
         List<Attachment> attachments = getAttachments(Optional.of(AttachmentCriteria.criteriaBuilder(AttachmentCriteria.isPendingAttachment(), AttachmentCriteria.isInUploadableState())), PendingAttachment.class);
@@ -238,9 +322,25 @@ public class AttachmentService implements IAttachmentService {
             return null;
         }
     }
+
+
+//    TODO : MERGING OF PENDING AND AUTHORIZED
     @Override
-    public ReportDto addReport(ReportDto reportDto, Optional<Predicate<Attachment>> predicate) {
-        Attachment attachment = getAttachments(predicate, Attachment.class).get(0);
+    public AttachmentDto uploadAttachmentById(UUID id) {
+        Attachment attachment = _attachmentRepository.findById(id).orElse(null);
+        if (attachment != null && attachment.getState().equals(ContentState.UPLOADABLE)) {
+            attachment.setState(ContentState.UPLOADED);
+            _attachmentRepository.save(attachment);
+            return GenericAttachmentMapper.toDto(attachment, true);
+        }
+        return null;
+    }
+
+
+    @Override
+    public ReportDto addReport(ReportDto reportDto, Predicate<Attachment> predicate) {
+        List<Attachment> attachments = _attachmentRepository.findAll().stream().filter(predicate).toList();
+        Attachment attachment = (!attachments.isEmpty()) ? attachments.get(0) : null;
         if (attachment != null) {
 //            ReportDto result = _reportService.addReport(reportDto);
 //            if (result != null) {
@@ -250,29 +350,25 @@ public class AttachmentService implements IAttachmentService {
             _attachmentRepository.save(attachment);
 //            _reportService.saveInRepository(report);
             return ReportMapper.toDto(report, true);
-//            } else {
-//                return null;
-//            }
-        } else {
-            return null;
         }
+        return null;
     }
-    private Attachment updateAttachment(AttachmentDto attachmentDto, UserPermission permission) {
-        var builder = _attachmentBuilderFactory.createAttachmentBuilder(permission);
-        builder.setName(attachmentDto.getName());
-        builder.setDescription(attachmentDto.getDescription());
-        builder.setAuthor(attachmentDto.getAuthor());
-        builder.setCreationDate(attachmentDto.getCreationDate());
-        builder.setExpiryDate(attachmentDto.getExpiryDate());
-        builder.setState(attachmentDto.getState());
-        if (attachmentDto.getPoi() != null) {
-            builder.setPoi(GenericPOIMapper.toEntity(attachmentDto.getPoi(), true));
-        }
-        if (attachmentDto.getItinerary() != null) {
-            builder.setItinerary(GenericItineraryMapper.toEntity(attachmentDto.getItinerary(), true));
-        }
-        var attachment = builder.build();
-        attachment.setId(attachmentDto.getId());
-        return attachment;
-    }
+//    private Attachment updateAttachment(AttachmentDto attachmentDto, UserPermission permission) {
+//        var builder = _attachmentBuilderFactory.createAttachmentBuilder(permission);
+//        builder.setName(attachmentDto.getName());
+//        builder.setDescription(attachmentDto.getDescription());
+//        builder.setAuthor(attachmentDto.getAuthor());
+//        builder.setCreationDate(attachmentDto.getCreationDate());
+//        builder.setExpiryDate(attachmentDto.getExpiryDate());
+//        builder.setState(attachmentDto.getState());
+//        if (attachmentDto.getPoi() != null) {
+//            builder.setPoi(GenericPOIMapper.toEntity(attachmentDto.getPoi(), true));
+//        }
+//        if (attachmentDto.getItinerary() != null) {
+//            builder.setItinerary(GenericItineraryMapper.toEntity(attachmentDto.getItinerary(), true));
+//        }
+//        var attachment = builder.build();
+//        attachment.setId(attachmentDto.getId());
+//        return attachment;
+//    }
 }
